[package]
name = "preposterous_lib"
version = "0.1.0"
edition = "2021"

description = "A language-agnostic C-style preprocessor."

authors = ["Kyllingene"]
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "preposterous_lib"
path = "lib.rs"
